Added home page and multi-modal project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>alexmingzhang</title>
+
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="colors.css" type="text/css" rel="stylesheet">
+		<link href="style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>hello</h1>
+		<div id="header">
+			<h1>Alex Ming Zhang</h1>
+			<h3>UTK Class of 2025</h3>
+		</div>
+		<div id="body">
+			<a class="info-box" href="multimodal/index.html">
+				<h3>Multi-Modal Project</h3>
+				<p class="info-box-desc">Digital project designed to effectively communicate a defensible claim to persuade a public audience.</p>
+				<p class="info-box-date">Dec 9, 2021</p>
+			</a>
+		</div>
+		<div id="footer">
+			© Alex M. Zhang 2021
+		</div>
 	</body>
 </html>
