--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Alex Ming Zhang</h1>
 			<h3>UTK Class of 2025</h3>
 		</div>
-		<div id="body">
+		<div id="main">
 			<a class="info-box" href="multimodal/index.html">
 				<h3>Multi-Modal Project</h3>
 				<p class="info-box-desc">Digital project designed to effectively communicate a defensible claim to persuade a public audience.</p>
