--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 				<p class="info-box-desc">Digital project designed to effectively communicate a defensible claim to persuade a public audience.</p>
 				<p class="info-box-date">Dec 9, 2021</p>
 			</a>
+			<a class="info-box" href="archival/index.html">
+				<h3>Archival Research</h3>
+				<p class="info-box-desc">Virtual museum exhibit diachronically showcasing the evolution of story-telling media.</p>
+				<p class="info-box-date">Apr 7, 2022</p>
+			</a>
 		</div>
 		<div id="footer">
 			© Alex M. Zhang 2021
